--- a/templates/diet_main.html
+++ b/templates/diet_main.html
@@ -22,9 +22,12 @@
 		<button name ="submit" value="Submit">Submit</button>
 	</form>
 	<div id = "display"></div>
-	<input type="text" id="calories" placeholder="check nutrients">
-	<button id = "check">check</button>
-	<div id="display_nutrients"></div>
+
+	<div id = "calories_check">
+		<input type="text" id="calories" placeholder="check nutrients">
+		<button id = "check">check</button>
+		<div id="display_nutrients"></div>
+	</div>
 	</div>
 </body>
 <script>
