--- a/templates/diet_main.html
+++ b/templates/diet_main.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Diety</title>
+	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/diet_style.css')}}">
 </head>
 <body>
 	<div id = "main">
